--- a/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/glm2_cosine_cj_cnn/Sigmoid_CV_I_09/0.yaml
+++ b/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/glm2_cosine_cj_cnn/Sigmoid_CV_I_09/0.yaml
@@ -41,7 +41,7 @@ data:
     tensor_dir: ./outputs/categorical_jacobians/glm2_cosine_post250521/
     batch_size: 8
     positive_only: false
-    num_workers: 1
+    num_workers: 4
     num_samples: 500
     concat_type: gLM2
     kfolds: 5
@@ -66,3 +66,38 @@ trainer:
       log_model: false
       prefix: gLM2
   enable_checkpointing: true
+callbacks:
+  - class_path: pytorch_lightning.callbacks.EarlyStopping
+    init_args:
+      patience: 10
+      monitor: validate/loss
+      mode: min
+  - class_path: pytorch_lightning.callbacks.ModelCheckpoint
+    init_args:
+      dirpath: logs/CategoricalJacobianCNN/Sigmoid_CV_I_09/gLM2/0/checkpoints/
+      filename: model-{epoch}
+      monitor: validate/loss
+      mode: min
+      save_last: true
+      save_top_k: 1
+  - class_path: gLM.callbacks.OutputLoggingCallback
+    init_args:
+      class_names:
+      - Negative
+      - Positive
+      y_pred_key: predictions
+      y_pred_lab_key: predicted_label
+      y_true_lab_key: label
+      make_one_hot: true
+      invert_probabilities: false
+      make_correct_dim: true
+      metrics_to_plot:
+      - confusion_matrix
+      - class_proportions
+      - calibration_curves
+      - classification_report
+      - mcc
+      - roc_auc
+      - pr_auc
+      log_every_n_steps: 1
+      metric_log_file: logs/CategoricalJacobianCNN/Sigmoid_CV_I_09/gLM2/0/metrics.csv
